tests/errors/no_return.ne
include "Standard"

function main(): int32
{
    print("This should not compile");
    // no return
}
